[gd_scene load_steps=15 format=2]

[ext_resource path="res://systems/SelectUnitSystem.tscn" type="PackedScene" id=1]
[ext_resource path="res://StartPosition.tscn" type="PackedScene" id=2]
[ext_resource path="res://systems/MoveToDestinationSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://entities/ShadowfireMapEntity.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/UnitSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/CommandSelector.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/GameLog.tscn" type="PackedScene" id=8]
[ext_resource path="res://systems/FogOfWarSystem.tscn" type="PackedScene" id=9]
[ext_resource path="res://systems/ShootingSystem.tscn" type="PackedScene" id=10]
[ext_resource path="res://systems/VoiceSystem.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sfx/gain_walkers_Sci_Fi_Atmosphere_03.ogg" type="AudioStream" id=12]
[ext_resource path="res://systems/UnitDamageSystem.tscn" type="PackedScene" id=13]
[ext_resource path="res://systems/PickupSystem.tscn" type="PackedScene" id=14]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="StartPositions" type="Node" parent="."]

[node name="PlayerStartPosition" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( 778, 1264 )

[node name="EnemyStartPosition" parent="StartPositions" instance=ExtResource( 2 )]
position = Vector2( 798.851, 1485.02 )
type = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Systems" type="Node" parent="."]

[node name="PickupSystem" parent="Systems" instance=ExtResource( 14 )]

[node name="SelectUnitSystem" parent="Systems" instance=ExtResource( 1 )]

[node name="MoveToDestinationSystem" parent="Systems" instance=ExtResource( 3 )]

[node name="FogOfWarSystem" parent="Systems" instance=ExtResource( 9 )]

[node name="ShootingSystem" parent="Systems" instance=ExtResource( 10 )]

[node name="VoiceSystem" parent="Systems" instance=ExtResource( 11 )]

[node name="UnitDamageSystem" parent="Systems" instance=ExtResource( 13 )]

[node name="Entities" type="Node" parent="."]

[node name="ShadowfireMapEntity" parent="Entities" instance=ExtResource( 5 )]
z_index = -1

[node name="HUD" type="Node2D" parent="."]

[node name="GameLog" parent="HUD" instance=ExtResource( 8 )]

[node name="CommandSelector" parent="HUD" instance=ExtResource( 7 )]

[node name="UnitSelector" parent="HUD" instance=ExtResource( 6 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
autoplay = true
